objects/Supplier__c.object
<CustomObject>
    <description>Supplier or Vendor</description>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <description>Address Line 1</description>
        <inlineHelpText>Address Line 1</inlineHelpText>
        <label>Address Line 1</label>
        <length>35</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <description>Address Line 2</description>
        <inlineHelpText>Address Line 2</inlineHelpText>
        <label>Address Line 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Supplier Category</description>
        <inlineHelpText>Supplier Category</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>non-Food</fullName>
                    <default>true</default>
                    <label>non-Food</label>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificate_Of_Insurance__c</fullName>
        <description>Certificate of Insurance</description>
        <inlineHelpText>Certificate of Insurance</inlineHelpText>
        <label>Certificate Of Insurance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comment</description>
        <inlineHelpText>Comment</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Contact Email</description>
        <inlineHelpText>Contact Email</inlineHelpText>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Contact</description>
        <inlineHelpText>Contact</inlineHelpText>
        <label>Contact</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Compliant__c</fullName>
        <formula>IF(ISPICKVAL( Supplier_Status__c, &quot;Delisted&quot;), &quot;Discontinued&quot;, 
 IF(AND( ISPICKVAL( Supplier_Status__c, &quot;Active&quot;) ,  
        Contract_Signed__c  = True) ,&quot;Compliant&quot; ,&quot;Non Compliant&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Compliant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Receive_Date__c</fullName>
        <description>Contract Receive Date</description>
        <inlineHelpText>Contract Receive Date</inlineHelpText>
        <label>Contract Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_Date__c</fullName>
        <description>Contract Signed Date</description>
        <inlineHelpText>Contract Signed Date</inlineHelpText>
        <label>Contract Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contract Signed</description>
        <inlineHelpText>Contract Signed</inlineHelpText>
        <label>Contract Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Control_Brand_Vendor__c</fullName>
        <label>Control Brand Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Supplier</relationshipLabel>
        <relationshipName>Supplier</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Reference__c</fullName>
        <description>Documentation Reference</description>
        <inlineHelpText>Documentation Reference</inlineHelpText>
        <label>Document Reference</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Fax</description>
        <inlineHelpText>Fax</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <description>GeoLocation</description>
        <inlineHelpText>GeoLocation</inlineHelpText>
        <label>GeoLocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <description>Organization</description>
        <inlineHelpText>Organization</inlineHelpText>
        <label>Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Unit 1</fullName>
                    <default>true</default>
                    <label>Business Unit 1</label>
                </value>
                <value>
                    <fullName>Business Unit 2</fullName>
                </value>
                <value>
                    <fullName>Business Unit 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSTL_Code__c</fullName>
        <description>Postal Code</description>
        <inlineHelpText>Postal Code</inlineHelpText>
        <label>PSTL Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone Number</description>
        <inlineHelpText>Phone Number</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Prev_Supplier_Name__c</fullName>
        <description>Previous Supplier Name</description>
        <inlineHelpText>Previous Supplier Nam</inlineHelpText>
        <label>Prev Supplier Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Country__c</field>
                <operation>equals</operation>
                <valueField>Region__c.Country__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Supplier</relationshipLabel>
        <relationshipName>SupplierRegion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Agreement__c</fullName>
        <description>Supplier Agreement Type</description>
        <inlineHelpText>Supplier Agreement Type</inlineHelpText>
        <label>Supplier Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Resisted</fullName>
                </value>
                <value>
                    <fullName>Addendum Agreement</fullName>
                </value>
                <value>
                    <fullName>Specific Supplier Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Compliant_Status__c</fullName>
        <formula>AND(  ISPICKVAL(  Supplier_Status__c  , &quot;Active&quot;),
NOT(ISBLANK(  Contract_Signed_Date__c  )),
  Certificate_Of_Insurance__c  &gt;= TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Compliant Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Name_2__c</fullName>
        <description>Supplier Name 2</description>
        <inlineHelpText>Supplier Name 2</inlineHelpText>
        <label>Supplier Name 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Number__c</fullName>
        <description>Supplier Number</description>
        <displayFormat>{0000000}</displayFormat>
        <inlineHelpText>Supplier Number</inlineHelpText>
        <label>Supplier Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Supplier_Status__c</fullName>
        <description>Supplier Status</description>
        <inlineHelpText>Supplier Status</inlineHelpText>
        <label>Supplier Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Delisted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Tax_Number__c</fullName>
        <description>Supplier Tax Number</description>
        <inlineHelpText>Supplier Tax Number</inlineHelpText>
        <label>Supplier Tax Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Type__c</fullName>
        <description>Supplier Type</description>
        <inlineHelpText>Supplier Type</inlineHelpText>
        <label>Supplier Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>Offshore</fullName>
                    <default>true</default>
                    <label>Offshore</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Supplier Website</description>
        <inlineHelpText>Supplier Website</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Supplier</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Supplier_Number__c</columns>
        <columns>NAME</columns>
        <columns>Address_Line_1__c</columns>
        <columns>Country__c</columns>
        <columns>Supplier_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Supplier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>